# rsomics-fastq-dedup

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  dedup.rs  lib.rs  main.rs  report.rs
tests/: compat.rs  smoke.rs
tests/golden/: dup.fastq  dup.kept.seqs
