[package]
name = "rsomics-fastq-dedup"
version = "0.1.0"
description = "Sequence-based FASTQ deduplication (kmer-bin or full-sequence hash). Rust port consolidating fastp -D and seqkit rmdup."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories = ["science", "command-line-utilities"]
keywords = ["fastq", "deduplication", "bioinformatics", "fastp", "seqkit"]

[[bin]]
name = "rsomics-fastq-dedup"
path = "src/main.rs"

[dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5" }
rsomics-help = { path = "../../../foundation/rsomics-help", version = "0.3" }
rsomics-kmer = { path = "../../../foundation/rsomics-kmer", version = "0.1" }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
needletail = { version = "0.7", default-features = false, features = ["compression"] }
flate2.workspace = true

[dev-dependencies]
rsomics-common = { path = "../../../foundation/rsomics-common", version = "0.5", features = ["test-support"] }
tempfile = "3"

[lints]
workspace = true
